--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    background: #ddd;
+    border: 1px solid #ddd;
 }
 .chat-area {
     height: 90%;
     overflow-y: scroll;
+    background: #ddd;
 }
 .text-div {
     width: 100%;
@@ -16,25 +17,79 @@
     padding: 10px 0;
     clear: both;
 }
+.clearfix {
+    clear: both;
+}
 .bot-text,
 .user-text {
     min-height: 20px;
     max-width: 60%;
-    padding: 10px 40px;
-    border-radius: 20px;
+    border-radius: 40px;
+    padding: 20px 30px;
+    font-size: 12px;
 }
 .bot-text {
     background: navy;
     color: white;
     float: right;
+    margin-right: 10px;
 }
 .user-text {
     background: white;
     color: navy;
     float: left;
+    margin-left: 10px;
 }
 .input-area {
     position: absolute;
     bottom: 10px;
     width: 320px;
+    text-align: center;
+}
+.carousel-wrapper {
+    position: relative;
+    float: right;
+    width: 85%;
+}
+.slide {
+    display: none;
+}
+.prev-btn, .next-btn {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #ccb5b5;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+.next-btn {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev-btn:hover, .next-btn:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+img {
+    max-width: 100%;
+    height: 150px;
+}
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
