--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,30 @@
-.wrapper {
-    height: 500px;
-    width: 320px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    border: 1px solid #ddd;
+
+body {
+    margin: 0;
+    font-family: Helvetica, sans-serif;
+    line-height: 1.3;
+}
+.chatarea-container {
+    height: 100vh;
+    width: 100vw;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('img/conversationWithOutText.jpg');
 }
 .chat-area {
-    height: 90%;
+    max-height: 80vh;
+    width: 100vw;
     overflow-y: scroll;
-    background: #ddd;
+}
+.text-div:first-child {
+    padding-top: 80px;
 }
 .text-div {
-    width: 100%;
+    width: 92%;
+    margin: 0 auto;
     min-height: 30px;
-    padding: 10px 0;
+    padding: 10px 0 0;
     clear: both;
 }
 .clearfix {
@@ -24,27 +34,70 @@
 .user-text {
     min-height: 20px;
     max-width: 60%;
-    border-radius: 40px;
+    border-radius: 33px;
     padding: 20px 30px;
-    font-size: 12px;
+    font-size: 16px;
 }
-.bot-text {
-    background: navy;
-    color: white;
+.bot-text{
+    background: #002A82;
+    color: #9BA9C9;
     float: right;
     margin-right: 10px;
+    position: relative;
 }
 .user-text {
-    background: white;
-    color: navy;
+    background: white; 
+    color: #8083ae;
     float: left;
     margin-left: 10px;
+    position: relative;
+}
+.bot-text::after,
+.user-text::after {
+    content: "";
+    width: 0;
+    position: absolute;
+    height: 0;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    bottom: -5px;
+}
+.bot-text::after {
+    border-left: 35px solid #002A82;
+    right: -3px;
+    transform: rotate(37deg);
+
+}
+.user-text::after {
+    border-right: 35px solid white;
+    left: -5px;
+    transform: rotate(-37deg);
+
 }
 .input-area {
+    width: 100%;
     position: absolute;
-    bottom: 10px;
-    width: 320px;
+    bottom: 25px;
     text-align: center;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+.input-area input,
+.input-area button {
+    font-size: 18px;
+    border: 1px solid #AC9D6C;
+    padding: 10px;
+}
+.input-area input {
+    float: left;
+    width: 74%;
+    box-sizing: border-box;
+}
+.input-area button {
+    float: right;
+    width: 25%;
+    outline: none;
+    background: #AC9D6C;
 }
 .carousel-wrapper {
     position: relative;
