--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,21 @@ body {
     font-family: Helvetica, sans-serif;
     line-height: 1.3;
 }
-.chatarea-container {
+.chatarea-container,
+.homescreen-container {
     height: 100vh;
     width: 100vw;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+}
+.homescreen-container {
+    background-image: url('../img/home.jpg');
+}
+.chatarea-container {
     background-image: url('../img/conversationWithOutText.jpg');
+    opacity: 0;
+    transition: opacity 3000ms;
 }
 .chat-area {
     max-height: 80vh;
@@ -18,7 +26,7 @@ body {
     overflow-y: scroll;
 }
 .text-div:first-child {
-    padding-top: 80px;
+    padding-top: 110px;
 }
 .text-div {
     width: 92%;
@@ -81,6 +89,8 @@ body {
     text-align: center;
     padding: 0 20px;
     box-sizing: border-box;
+    opacity: 0;
+    transition: opacity 3000ms;
 }
 .input-area input,
 .input-area button {
@@ -145,4 +155,7 @@ img {
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+}
+.fade-in {
+  opacity: 1;
 }
